Hierarchy-aware entitlement instrumentation
Rules defined on a supertype or interface now automatically
apply to all loaded subtypes, eliminating rule duplication
across concrete implementation classes.

Made-with: Cursor